mrtk-docs-old/2.5.0/features/README_TapToPlace.md
---
title: README_TapToPlace
description: Documentazione di TapToPlace MRTK
author: CDiaz-MS
ms.author: cadia
ms.date: 01/12/2021
ms.localizationpriority: high
keywords: Unity, HoloLens, HoloLens 2, realtà mista, sviluppo, MRTK, tocco a posto,
ms.openlocfilehash: 6a8ac4a5f65f25ffaea690733847e9e720fef294
ms.sourcegitcommit: 97815006c09be0a43b3d9b33c1674150cdfecf2b
ms.translationtype: MT
ms.contentlocale: it-IT
ms.lasthandoff: 03/03/2021
ms.locfileid: "101783100"
---
# <a name="tap-to-place"></a><span data-ttu-id="ecedc-104">Toccare per posizionare</span><span class="sxs-lookup"><span data-stu-id="ecedc-104">Tap to Place</span></span>

![TapToPlace](Images/Solver/TapToPlace/TapToPlaceIntroGif.gif)

<span data-ttu-id="ecedc-106">Toccare per posizionare è un componente di interazione molto usato per posizionare un oggetto gioco sulla superficie.</span><span class="sxs-lookup"><span data-stu-id="ecedc-106">Tap to Place is a far interaction component that is used to place a game object on surface.</span></span> <span data-ttu-id="ecedc-107">Questo componente è utile per inserire oggetti in una rete spaziale.</span><span class="sxs-lookup"><span data-stu-id="ecedc-107">This component is useful for placing objects on a spatial mesh.</span></span> <span data-ttu-id="ecedc-108">Toccare per posizionare usa una combinazione di due clic e movimento Head per inserire un oggetto.</span><span class="sxs-lookup"><span data-stu-id="ecedc-108">Tap to Place uses a combination of two clicks and head movement to place an object.</span></span> <span data-ttu-id="ecedc-109">Un clic per avviare la selezione host, lo spostamento Head per controllare la posizione dell'oggetto e un clic per posizionare l'oggetto nella scena.</span><span class="sxs-lookup"><span data-stu-id="ecedc-109">A click to start the placement, head movement to control the position of the object and a click to place the object in the scene.</span></span>

## <a name="using-tap-to-place"></a><span data-ttu-id="ecedc-110">Uso del tocco per posizionare</span><span class="sxs-lookup"><span data-stu-id="ecedc-110">Using Tap to Place</span></span>

1. <span data-ttu-id="ecedc-111">Configurare la scena</span><span class="sxs-lookup"><span data-stu-id="ecedc-111">Set up the scene</span></span>
    - <span data-ttu-id="ecedc-112">Crea una nuova scena Unity</span><span class="sxs-lookup"><span data-stu-id="ecedc-112">Create a new unity scene</span></span>
    - <span data-ttu-id="ecedc-113">Per aggiungere MRTK alla scena, passare al Toolkit di **realtà mista**  >  **Aggiungi alla scena e configurare**</span><span class="sxs-lookup"><span data-stu-id="ecedc-113">Add MRTK to the scene by navigating to the **Mixed Reality Toolkit** > **Add to Scene and Configure**</span></span>
    > [!NOTE]
    > <span data-ttu-id="ecedc-114">Toccare per posizionare usa i clic basati sul sistema di input MRTK, ma può anche essere controllato senza clic, vedere la sezione tap to Place configurabilità del codice riportata di seguito.</span><span class="sxs-lookup"><span data-stu-id="ecedc-114">Tap to Place uses clicks driven by the MRTK Input System but it can also be controlled without clicks, see the Tap To Place Code Configurability section below.</span></span>
    - <span data-ttu-id="ecedc-115">Aggiungere un cubo alla scena e impostare la scala su 0,2 e impostare la posizione su (0, 0, 0,7).</span><span class="sxs-lookup"><span data-stu-id="ecedc-115">Add a cube to the scene and change the scale to 0.2 and change the position to (0, 0, 0.7).</span></span>
1. <span data-ttu-id="ecedc-116">Associa il [tocco alla posizione](xref:Microsoft.MixedReality.Toolkit.Utilities.Solvers.TapToPlace) di un oggetto gioco con un Collider</span><span class="sxs-lookup"><span data-stu-id="ecedc-116">Attach [Tap to Place](xref:Microsoft.MixedReality.Toolkit.Utilities.Solvers.TapToPlace) to a game object with a collider</span></span>

    ![TapToPlaceInspector](Images/Solver/TapToPlace/TapToPlaceInspector2.png)

    - <span data-ttu-id="ecedc-118">Quando viene aggiunto il componente tap to Place, viene collegato anche un gestore del Risolutore.</span><span class="sxs-lookup"><span data-stu-id="ecedc-118">When the Tap to Place component is added, a Solver Handler will also be attached.</span></span> <span data-ttu-id="ecedc-119">Toccare per posizionare deriva dalla classe [Solver](README_Solver.md) che richiede un gestore del Risolutore.</span><span class="sxs-lookup"><span data-stu-id="ecedc-119">Tap to Place derives from the [Solver](README_Solver.md) class which requires a Solver Handler.</span></span> <span data-ttu-id="ecedc-120">La posizione di un oggetto Tap per posizionare viene calcolata in relazione all'oggetto `TrackedTargetType` all'interno del gestore del Risolutore.</span><span class="sxs-lookup"><span data-stu-id="ecedc-120">The position of a Tap to Place object is calculated relative to the `TrackedTargetType` within the Solver Handler.</span></span> <span data-ttu-id="ecedc-121">Per impostazione predefinita, l'intestazione è `TrackedTargetType` , ovvero quando viene spostata, l'oggetto segue se è selezionato.</span><span class="sxs-lookup"><span data-stu-id="ecedc-121">By default the Head is the `TrackedTargetType`, i.e. when the head moves, the object follows if it is selected.</span></span>  <span data-ttu-id="ecedc-122">`TrackedTargetType`Può anche essere impostato su un raggio del controller che ha l'oggetto che segue il controller.</span><span class="sxs-lookup"><span data-stu-id="ecedc-122">The `TrackedTargetType` can also be set to Controller Ray which has the object follow the controller.</span></span> <span data-ttu-id="ecedc-123">Il primo gruppo di proprietà nel controllo Tap to Place è costituito dalle [proprietà del Risolutore comune](README_Solver.md#common-solver-properties).</span><span class="sxs-lookup"><span data-stu-id="ecedc-123">The first group of properties in the Tap to Place inspector are the [Common Solver Properties](README_Solver.md#common-solver-properties).</span></span>  
    > [!IMPORTANT]
    > <span data-ttu-id="ecedc-124">Il tocco da posizionare è un risolutore autonomo e non può essere concatenato ad altri risolutori.</span><span class="sxs-lookup"><span data-stu-id="ecedc-124">Tap to Place is a stand alone Solver and cannot be chained with other Solvers.</span></span> <span data-ttu-id="ecedc-125">Non può essere concatenato perché SolverHandler. UpdateSolvers viene usato per aggiornare la posizione dell'oggetto durante la sua immissione.</span><span class="sxs-lookup"><span data-stu-id="ecedc-125">It cannot be chained because SolverHandler.UpdateSolvers is used to update the object's position while it is being placed.</span></span>
    - <span data-ttu-id="ecedc-126">Toccare per inserire le proprietà:</span><span class="sxs-lookup"><span data-stu-id="ecedc-126">Tap to Place Properties:</span></span>
        - <span data-ttu-id="ecedc-127">`Auto Start`: Se true, il tocco per posizionare il Risolutore inizierà a controllare la posizione dell'oggetto gioco da inserire.</span><span class="sxs-lookup"><span data-stu-id="ecedc-127">`Auto Start`: If true, the Tap to Place solver will start out controlling the position of the game object to be placed.</span></span> <span data-ttu-id="ecedc-128">L'oggetto inizierà immediatamente dopo TrackedTargetType (Head o Ray controller).</span><span class="sxs-lookup"><span data-stu-id="ecedc-128">The object will immediately start following the TrackedTargetType (Head or Controller Ray).</span></span> <span data-ttu-id="ecedc-129">Questo valore deve essere modificato prima che venga richiamato Start () per avere un effetto.</span><span class="sxs-lookup"><span data-stu-id="ecedc-129">This value must be modified before Start() is invoked in order to have any effect.</span></span>
        - <span data-ttu-id="ecedc-130">`Default Placement Distance`: Distanza predefinita (in metri) in cui un oggetto verrà inserito rispetto al TrackedTargetType successivo in SolverHandler.</span><span class="sxs-lookup"><span data-stu-id="ecedc-130">`Default Placement Distance`: The default distance (in meters) an object will be placed relative to the TrackedTargetType forward in the SolverHandler.</span></span> <span data-ttu-id="ecedc-131">Se una superficie non viene raggiunta da Raycast, l'oggetto Game verrà posizionato alla distanza di posizionamento predefinita.</span><span class="sxs-lookup"><span data-stu-id="ecedc-131">The game object will be placed at the default placement distance if a surface is not hit by the raycast.</span></span>
        - <span data-ttu-id="ecedc-132">`Max Raycast Distance`: Distanza massima (contatori) per il Raycast in base all'origine ' TrackedTargetType '.</span><span class="sxs-lookup"><span data-stu-id="ecedc-132">`Max Raycast Distance`: The max distance (meters) for the raycast based on the 'TrackedTargetType' origin.</span></span> <span data-ttu-id="ecedc-133">Questo Raycast cerca una superficie per inserire un oggetto selezionato.</span><span class="sxs-lookup"><span data-stu-id="ecedc-133">This raycast looks for a surface to place a selected object.</span></span>
        - <span data-ttu-id="ecedc-134">`UseDefaultSurfaceNormalOffset`: Questa proprietà è true per impostazione predefinita, assicura che l'oggetto da posizionare sia allineato in una superficie.</span><span class="sxs-lookup"><span data-stu-id="ecedc-134">`UseDefaultSurfaceNormalOffset`: This property is true by default, it ensures the object being placed is aligned on a surface.</span></span> <span data-ttu-id="ecedc-135">Se questa proprietà è true, verrà applicato l'offset normale della superficie predefinita al posto di qualsiasi valore specificato per la `SurfaceNormalOffset` Proprietà.</span><span class="sxs-lookup"><span data-stu-id="ecedc-135">If this property is true, the default surface normal offset will be applied instead of any value specified for the `SurfaceNormalOffset` property.</span></span> <span data-ttu-id="ecedc-136">Se false, verrà applicato il valore per `SurfaceNormalOffset` .</span><span class="sxs-lookup"><span data-stu-id="ecedc-136">If false, the value for `SurfaceNormalOffset` will be applied.</span></span> <span data-ttu-id="ecedc-137">L'offset normale della superficie predefinita è l'extent del Collider lungo l'asse z.</span><span class="sxs-lookup"><span data-stu-id="ecedc-137">The default surface normal offset is the collider's extents along the z axis.</span></span>
        - <span data-ttu-id="ecedc-138">`Surface Normal Offset`: Distanza tra il centro dell'oggetto gioco e una superficie lungo la normale della superficie, se il Raycast raggiunge una superficie.</span><span class="sxs-lookup"><span data-stu-id="ecedc-138">`Surface Normal Offset`: The distance between the center of the game object to place and a surface along the surface normal, if the raycast hits a surface.</span></span> <span data-ttu-id="ecedc-139">Questa proprietà viene applicata a un oggetto solo se `UseDefaultSurfaceNormalOffset` è false.</span><span class="sxs-lookup"><span data-stu-id="ecedc-139">This property is only applied to an object if `UseDefaultSurfaceNormalOffset` is false.</span></span>
        - <span data-ttu-id="ecedc-140">`Keep Orientation Vertical`: Se è true, l'oggetto Game da inserire rimarrà in verticale e in linea con Vector3. up.</span><span class="sxs-lookup"><span data-stu-id="ecedc-140">`Keep Orientation Vertical`: If true, the game object to place will remain upright and in line with Vector3.up.</span></span>
        - <span data-ttu-id="ecedc-141">`Rotate According to Surface`: Se false, l'oggetto Game da inserire non modifica la rotazione in base alla superficie raggiunta.</span><span class="sxs-lookup"><span data-stu-id="ecedc-141">`Rotate According to Surface`: If false, the game object to place will not change its rotation according to the surface hit.</span></span>  <span data-ttu-id="ecedc-142">L'oggetto rimarrà connesso alla videocamera mentre IsBeingPlaced è true.</span><span class="sxs-lookup"><span data-stu-id="ecedc-142">The object will remain facing the camera while IsBeingPlaced is true.</span></span>
        - <span data-ttu-id="ecedc-143">`Magnetic Surfaces`: Matrice di LayerMasks da eseguire dalla priorità più alta alla più bassa.</span><span class="sxs-lookup"><span data-stu-id="ecedc-143">`Magnetic Surfaces`: An array of LayerMasks to execute from highest to lowest priority.</span></span> <span data-ttu-id="ecedc-144">Prima maschera di livello per fornire un hit Raycast verrà usato per i calcoli di posizione.</span><span class="sxs-lookup"><span data-stu-id="ecedc-144">First layer mask to provide a raycast hit will be used for position calculations.</span></span>
        - <span data-ttu-id="ecedc-145">`Debug Enabled`: Se è true e nell'editor di Unity, il valore normale del Raycast hit verrà disegnato in giallo.</span><span class="sxs-lookup"><span data-stu-id="ecedc-145">`Debug Enabled`: If true and in the Unity Editor, the normal of the raycast hit will be drawn in yellow.</span></span> <span data-ttu-id="ecedc-146">Il debug abilitato è utile quando `RotateAccordingToSurface` è true perché disegna la normale della superficie raggiunta, che spiega visivamente il motivo per cui l'oggetto viene impostato sull'orientamento corrente.</span><span class="sxs-lookup"><span data-stu-id="ecedc-146">Debug enabled is useful when `RotateAccordingToSurface` is true because it draws the normal of the surface hit which visually explains why the object is set at its current orientation.</span></span>
        - <span data-ttu-id="ecedc-147">`On Placing Started`: Questo evento viene attivato una volta quando viene selezionato l'oggetto gioco da inserire.</span><span class="sxs-lookup"><span data-stu-id="ecedc-147">`On Placing Started`: This event is triggered once when the game object to place is selected.</span></span>
        - <span data-ttu-id="ecedc-148">`On Placing Stopped`: Questo evento viene generato una volta quando l'oggetto Game da inserire viene deselezionato, inserito.</span><span class="sxs-lookup"><span data-stu-id="ecedc-148">`On Placing Stopped`: This event is triggered once when the game object to place is unselected, placed.</span></span>

1. <span data-ttu-id="ecedc-149">Test del comportamento di tap per posizionare nell'editor</span><span class="sxs-lookup"><span data-stu-id="ecedc-149">Testing Tap to Place behavior in editor</span></span>
    - <span data-ttu-id="ecedc-150">Premere Riproduci e tenere premuto la barra spaziatrice per visualizzare una mano di simulazione di input.</span><span class="sxs-lookup"><span data-stu-id="ecedc-150">Press play and hold the space bar to show an input simulation hand.</span></span>
    - <span data-ttu-id="ecedc-151">Spostare la mano fino a quando il cubo non è attivo e simulare un clic con la mano della simulazione di input facendo clic con il pulsante sinistro del mouse.</span><span class="sxs-lookup"><span data-stu-id="ecedc-151">Move the hand until the cube is in focus and simulate a click with the input simulation hand by clicking with the left mouse.</span></span>
        - <span data-ttu-id="ecedc-152">Se i Collider non sono presenti nella scena, l'oggetto seguirà `TrackedTargetType` in corrispondenza dell'oggetto definito `Default Placement Distance` .</span><span class="sxs-lookup"><span data-stu-id="ecedc-152">If colliders are not present in the scene, the object will follow the `TrackedTargetType` at the defined `Default Placement Distance`.</span></span>
    - <span data-ttu-id="ecedc-153">L'oggetto seguirà lo spostamento della `TrackedTargetType` selezione dopo.</span><span class="sxs-lookup"><span data-stu-id="ecedc-153">The object will follow the movement of the `TrackedTargetType` after selection.</span></span> <span data-ttu-id="ecedc-154">Per simulare il movimento Head nell'editor, premere i tasti WASD.</span><span class="sxs-lookup"><span data-stu-id="ecedc-154">To simulate head movement in editor, press the WASD keys.</span></span> <span data-ttu-id="ecedc-155">Modificare la rotazione della testa facendo clic e tenendo premuto il pulsante destro del mouse.</span><span class="sxs-lookup"><span data-stu-id="ecedc-155">Change head rotation by clicking and holding the right mouse.</span></span>
    - <span data-ttu-id="ecedc-156">Per arrestare l'inserimento dell'oggetto, fare di nuovo clic su.</span><span class="sxs-lookup"><span data-stu-id="ecedc-156">To stop placing the object, click again.</span></span>  <span data-ttu-id="ecedc-157">Non è necessario che l'oggetto sia attivo per il clic su Arresta selezione host.</span><span class="sxs-lookup"><span data-stu-id="ecedc-157">The object does not need to be in focus for the stop placement click.</span></span> <span data-ttu-id="ecedc-158">Lo stato attivo è necessario solo per il clic iniziale che avvia il processo di selezione host.</span><span class="sxs-lookup"><span data-stu-id="ecedc-158">Focus is only required for the initial click that starts the placement process.</span></span>

    <span data-ttu-id="ecedc-159">`TrackedTargetType`: Head (impostazione predefinita)</span><span class="sxs-lookup"><span data-stu-id="ecedc-159">`TrackedTargetType`: Head (Default)</span></span> |  <span data-ttu-id="ecedc-160">`TrackedTargetType`: Raggio controller</span><span class="sxs-lookup"><span data-stu-id="ecedc-160">`TrackedTargetType`: Controller Ray</span></span>
    :-------------------------:|:-------------------------:
    ![TapToPlaceInputSimulationHead](Images/Solver/TapToPlace/TapToPlaceInputSimulationHead.gif)  |  ![TapToPlaceInputSimulationControllerRay](Images/Solver/TapToPlace/TapToPlaceInputSimulationControllerRay.gif)

## <a name="tap-to-place-code-configurability"></a><span data-ttu-id="ecedc-163">Toccare per inserire la configurabilità del codice</span><span class="sxs-lookup"><span data-stu-id="ecedc-163">Tap to Place Code Configurability</span></span>

<span data-ttu-id="ecedc-164">Toccare per posizionare la tempistica di selezione degli oggetti può anche essere controllata tramite `StartPlacement()` e `StopPlacement()` anziché richiedere un evento click.</span><span class="sxs-lookup"><span data-stu-id="ecedc-164">Tap to Place object selection timing can also be controlled via `StartPlacement()` and `StopPlacement()` instead of requiring a click event.</span></span> <span data-ttu-id="ecedc-165">Questa funzionalità è utile per la scrittura di test e fornisce un metodo alternativo per inserire un oggetto nell'editor senza usare il sistema di input MRTK.</span><span class="sxs-lookup"><span data-stu-id="ecedc-165">This capability is useful for writing tests and provides an alternative method to place an object in editor without using the MRTK Input System.</span></span>

1. <span data-ttu-id="ecedc-166">Creare un oggetto gioco vuoto</span><span class="sxs-lookup"><span data-stu-id="ecedc-166">Create an empty game object</span></span>
1. <span data-ttu-id="ecedc-167">Crea e alleghi lo script di esempio seguente all'oggetto gioco vuoto</span><span class="sxs-lookup"><span data-stu-id="ecedc-167">Create and attach the following example script to the empty game object</span></span>

    ```c#
    using UnityEngine;
    using Microsoft.MixedReality.Toolkit.Utilities.Solvers;

    public class TapToPlaceInputExample : MonoBehaviour
    {
        private GameObject cube;
        private TapToPlace tapToPlace;

        void Start()
        {
            cube = GameObject.CreatePrimitive(PrimitiveType.Cube);
            cube.transform.localScale = Vector3.one * 0.2f;
            cube.transform.position = Vector3.forward * 0.7f;

            tapToPlace = cube.AddComponent<TapToPlace>();
        }

        void Update()
        {
            if (Input.GetKeyDown(KeyCode.U))
            {
                tapToPlace.StartPlacement();
            }
            if (Input.GetKeyDown(KeyCode.I))
            {
                tapToPlace.StopPlacement();
            }
        }
    }
    ```

1. <span data-ttu-id="ecedc-168">In modalità di riproduzione premere il *tasto U* per iniziare a inserire il cubo</span><span class="sxs-lookup"><span data-stu-id="ecedc-168">In play mode, press the *U key* to start placing the cube</span></span>
1. <span data-ttu-id="ecedc-169">Premere il *tasto* i per arrestare la selezione host</span><span class="sxs-lookup"><span data-stu-id="ecedc-169">Press the *I key* to stop the placement</span></span>

## <a name="tap-to-place-example-scene"></a><span data-ttu-id="ecedc-170">Toccare per inserire la scena di esempio</span><span class="sxs-lookup"><span data-stu-id="ecedc-170">Tap to Place Example Scene</span></span>

<span data-ttu-id="ecedc-171">La scena di esempio tap to Place è costituita da 4 oggetti posizionabili, ognuno con una configurazione diversa.</span><span class="sxs-lookup"><span data-stu-id="ecedc-171">The Tap to Place example scene consists of 4 placeable objects, each with a different configuration.</span></span> <span data-ttu-id="ecedc-172">La scena di esempio contiene i muri per mostrare il comportamento di posizionamento della superficie disabilitato per impostazione predefinita nella gerarchia.</span><span class="sxs-lookup"><span data-stu-id="ecedc-172">The example scene contains walls to show the surface placement behavior that are disabled by default in the hierarchy.</span></span> <span data-ttu-id="ecedc-173">La scena di esempio è disponibile nel pacchetto Microsoft. MixedReality. Toolkit. Unity. examples Unity disponibile nella [pagina della versione](https://github.com/Microsoft/MixedRealityToolkit-Unity/releases).</span><span class="sxs-lookup"><span data-stu-id="ecedc-173">The example scene can be found in the Microsoft.MixedReality.Toolkit.Unity.Examples unity package found on the [Release Page](https://github.com/Microsoft/MixedRealityToolkit-Unity/releases).</span></span> <span data-ttu-id="ecedc-174">Il percorso della scena è: *MRTK. Esempi/demo/risolutori/scene/TapToPlaceExample. Unity*</span><span class="sxs-lookup"><span data-stu-id="ecedc-174">The scene location is: *MRTK.Examples/Demos/Solvers/Scenes/TapToPlaceExample.unity*</span></span>

![TapToPlaceExampleScene](Images/Solver/TapToPlace/TapToPlaceExampleScene.gif)

## <a name="see-also"></a><span data-ttu-id="ecedc-176">Vedi anche</span><span class="sxs-lookup"><span data-stu-id="ecedc-176">See also</span></span>

- [<span data-ttu-id="ecedc-177">Risolutori</span><span class="sxs-lookup"><span data-stu-id="ecedc-177">Solvers</span></span>](README_Solver.md)
- [<span data-ttu-id="ecedc-178">Consapevolezza spaziale</span><span class="sxs-lookup"><span data-stu-id="ecedc-178">Spatial Awareness</span></span>](SpatialAwareness/SpatialAwarenessGettingStarted.md)
- [<span data-ttu-id="ecedc-179">Simulazione di input</span><span class="sxs-lookup"><span data-stu-id="ecedc-179">Input Simulation</span></span>](InputSimulation/InputSimulationService.md)
- [<span data-ttu-id="ecedc-180">Rilevamento della mano</span><span class="sxs-lookup"><span data-stu-id="ecedc-180">Hand Tracking</span></span>](Input/HandTracking.md)
- [<span data-ttu-id="ecedc-181">Sguardo fisso</span><span class="sxs-lookup"><span data-stu-id="ecedc-181">Gaze</span></span>](Input/Gaze.md)
